# puzzler

./: .gitignore  100.json  1000-unlabeled.json  1000.json  300.json  README.md  align.py  annotate_tabs_file.py  app.py  bucks.json  castle.json  circler.py  cricket.json  ellipse.py  graphit.py  match_quads_tabs.py  perimeter.py  puzzler.toml  segment.py
camera/: .gitignore  camera.py  capture.py  fcal.py  foo.py  ical.py  lcal.py  puzzbot.py  scantool.py
ctools/: .gitignore  nearest_point.cxx  nearest_point.h  puzzbin_validation.py  puzzler_ctools.c  puzzler_ctools.cxx  pyproject.toml  setup.py
lib/puzzbot/: server.py
lib/puzzbot/camera/: __init__.py  calibrate.py  camera.py  ffc.py  server.py
lib/puzzler/: __init__.py  align.py  chain.py  feature.py  file.py  frontier.py  geometry.py  icp.py  math.py  pocket.py  potrace.py  psolve.py  puzzle.py  raft.py  render.py  scenegraph.py  score.py  segment.py  sgbuilder.py  solver.py  spatial.py  spline.py  tabpairs.py  worker.py
lib/puzzler/commands/: __init__.py  align.py  browse.py  ellipse.py  init.py  lint.py  match.py  normals.py  points.py  quads.py  scan.py  tabs.py  triples.py
lib/puzzler/renderer/: cairo.py  canvas.py  opengl.py
scripts/: annotate_tabs_file.py  error_tracks.py  graph_solve_with_alternate_edges.py  graphit.py  match_puzzles.py  match_quads_tabs.py  mgraph.py  mosaic.py  msat.py  prune_features.py  quadhunter.py  quadmatch.py  quadprop.py  relabel_puzzle.py  repair_triples.py  sort_quads.py  speedscope_tool.py  tabpairs_csv_to_mmap.py  tabpairs_mmap_to_csv.py  upload.py
